parametersアクション追加

--- a/static/form.html
+++ b/static/form.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<form action="/show_request" method="post">
-  テキストボックス: <input name="text_name" type="text"><br>
-  パスワード: <input name="password_name" type="password"><br>
+<form action="/parameters" method="post">
+  テキストボックス: <input name="text_name" type="text"/> <br>
+  パスワード: <input name="password_name" type="password"/> <br>
   テキストエリア: <br>
   <textarea cols="40" name="text_area_name" rows="4"></textarea>
   <table border="1">
@@ -25,7 +25,7 @@
       </td>
     </tr>
   </table>
-  <input name="hidden_name" type="hidden" value="hidden_value_日本語">
+  <input name="hidden_name" type="hidden" value="hidden_value_日本語"/>
   ファイルアップロード: <input name="file_name" type="file"><br>
   <input name="submit_name" type="submit" value="送信">
 </form>
